fix(projects): Fix projects width on mobile
Add a media query to prevent projects from being too wide on the projects list

Fixes #36

--- a/client/app/projects/projects.scss
+++ b/client/app/projects/projects.scss
@@ -35,3 +35,12 @@ ul.project-list {
     font-size: 4em;
     text-align: center;
 }
+
+@media (max-width: $screen-md-max) {
+    ul.project-list li .project {
+        width: 95%;
+        .cover, .caption {
+            width: 100%;
+        }
+    }
+}
